# miniflux-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.sample.Chinese.yml  config.sample.English.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-image.yml
app/: __init__.py
app/routes/: __init__.py  digest.py  webhook.py
common/: __init__.py  config.py  exceptions.py  logger.py  models.py
core/: __init__.py  content_formater.py  content_helper.py  digest_generator.py  digest_handler.py  entry_filter.py  entry_handler.py  entry_processor.py  llm_client.py  miniflux_client.py  prompt_schema.py  rule_matcher.py
myapp/: __init__.py  ai_news.py  digest.py
tests/: __init__.py  test_config.py  test_content_helper.py  test_entry_filter.py  test_rule_matcher.py
