[project]
name = "miniflux-ai"
version = "0.0.0"
description = "AI-powered feed processing system for Miniflux"
requires-python = ">=3.10"
dependencies = [
    "miniflux",
    "openai",
    "markdownify",
    "mistune",
    "PyYAML",
    "flask",
    "feedgen",
    "schedule",
    "ratelimit",
    "beautifulsoup4",
    "lxml",
    "tiktoken",
    "cachetools",
]
